# groupcache-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  groupcache.go  groupcache_test.go  http.go  peers.go
consistenthash/: BUILD.bazel
example/: BUILD.bazel  main.go
groupcachepb/: BUILD.bazel
lru/: BUILD.bazel
singleflight/: BUILD.bazel
testpb/: BUILD.bazel
