load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "groupcachepb_proto",
    srcs = ["groupcache.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "groupcachepb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/brendanjryan/groupcache-bazel/groupcachepb",
    proto = ":groupcachepb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":groupcachepb_go_proto"],
    importpath = "github.com/brendanjryan/groupcache-bazel/groupcachepb",
    visibility = ["//visibility:public"],
)
