load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["lru.go"],
    importpath = "github.com/brendanjryan/groupcache-bazel/lru",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["lru_test.go"],
    embed = [":go_default_library"],
)
